# flask-container-action

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_app.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  codeql.yml  deploy_to_aks.yml  docker-image-build-and-push.yml
k8s/: deployment.yaml  service.yaml
templates/: index.html
